--- a/012/style.css
+++ b/012/style.css
@@ -19,6 +19,14 @@ hr {
     border-top: 1px solid #dedede;
 }
 
+/* https://iconfont.cn */
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+ }
+
 .clearfix::after {
     content: '';
     display: block;
