--- a/012/shape.css
+++ b/012/shape.css
@@ -2,61 +2,47 @@ body {
     background-color: ghostwhite;
 }
 
-#yin-yang {
+#bagua {
+    border: 1px solid black;
     width: 600px;
-    height: 600px;;
-    margin: 20px auto;
+    height: 600px;
     border-radius: 50%;
-    background: linear-gradient(to bottom, #ffffff 0%,#ffffff 0%,#ffffff 50%,#ffffff 50%,#ff0000 52%,#ff0000 100%); 
+    margin: 20px auto;
     position: relative;
 }
 
-#yin-yang > .one {
-    width: 300px;
-    height: 300px;
+#yin-yang {
+    width: 200px;
+    height: 200px;;
     border-radius: 50%;
-    background-color: red;
+    background: linear-gradient(to right, #ffffff 0%,#ffffff 0%,#ffffff 50%,#ffffff 50%,#000000 50%,#000000 100%); 
     position: absolute;
-    top: 150px;
-    left: 0;
+    top: 200px;
+    left: 200px;
+
+
 }
 
-#yin-yang > .two {
-    width: 300px;
-    height: 300px;
+#yin-yang::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: black;
+    border: 40px solid white;
+    position: absolute;
+    top: 0;
+    left: 50px;
+}
+
+#yin-yang::after {
+    content: "";
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     background-color: white;
+    border: 40px solid black;
     position: absolute;
-    top: 150px;
-    right: 0;
-}
-
-#yin-yang > .one > .circle{
-    width: 80px;
-    height: 80px;
-    background-color: white;
-    border-radius: 50%;
-    position: absolute;
-    top: 110px;
-    left: 110px;
-}
-
-#yin-yang > .two > .circle {
-    width: 80px;
-    height: 80px;
-    background-color: red;
-    border-radius: 50%;
-    position: absolute;
-    top: 110px;
-    left: 110px;
-}
-
-
-#yijing {
-    writing-mode: vertical-lr;
-    letter-spacing: 4px;
-    font-weight: bold;
-    position: fixed;
-    top: 10%;
-    left: 20%;
+    top: 100px;
+    left: 50px;
 }
