--- a/012/shape.css
+++ b/012/shape.css
@@ -1,5 +1,14 @@
+@keyframes spin{
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 body {
-    background-color: ghostwhite;
+    background-color: #f1f3f4;
 }
 
 #bagua {
@@ -19,8 +28,13 @@ body {
     position: absolute;
     top: 200px;
     left: 200px;
+}
 
-
+#yin-yang:hover {
+    animation-name: spin;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 #yin-yang::before {
