--- a/012/style.css
+++ b/012/style.css
@@ -8,9 +8,17 @@ body {
     margin: 0;
 }
 
+h1,h2,h2,h4,h5,h6 {
+    font-weight: normal;
+}
+
 a {
     color: inherit;
     text-decoration: none;
+}
+
+ul,ol {
+    list-style: none;
 }
 
 hr {
@@ -106,6 +114,7 @@ body > main {
     margin-left: auto;
     margin-right: auto;
     background-color: #ffffff;
+    box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.4);
 }
 .userCard .welcome {
     background-color: #e8676b;
@@ -178,3 +187,74 @@ body > main {
     vertical-align: top;
 }
 
+/* downloadResume */
+body > main .downloadResume-Wrapper  {
+    text-align: center;
+}
+body > main .downloadResume {
+    border: 1px solid #cbcdcf;
+    border-radius: 3px;
+    font-size: 14px;
+    padding: 21px 55px;
+    line-height: 16px;
+    display: inline-block;
+    color: #3d4451;
+    font-weight: bold;
+    margin: 33px 0;
+    transition: box-shadow 0.2s;
+}
+body > main .downloadResume:hover {
+    box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
+}
+body > main .selfIntroduction {
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-family: 'ZCOOL QingKe HuangYou',cursive;
+    font-size: 18px;
+    line-height: 1.8;
+    letter-spacing: 3px;
+}
+
+
+/* section */
+section.skills {
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 65px;
+}
+section.skills h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    color: #3d4451;
+    font-size: 34px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+section.skills h3 {
+    font-size: 14px;
+    line-height: 1.1;
+    padding-right: 40px;
+}
+section.skills ol {
+    background-color: white;
+    box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
+}
+section.skills ol > li {
+    float: left;
+    width: 50%;
+}
+
+/* progress */
+section.skills .progressBar {
+    height: 5px;
+    border: 1px solid red;
+    
+}
+section.skills .progressBar > .progress{
+    height: 100%;
+    width: 50%;
+    background-color: red;
+}
