--- a/012/style.css
+++ b/012/style.css
@@ -268,3 +268,51 @@ section.skills .progressBar > .progress{
     border-radius: 3px;
 }
 
+section.portfolio {
+    text-align: center;
+}
+section.portfolio > nav {
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+}
+section.portfolio nav ol {
+    border: 1px solid red;
+    display: inline-block;
+    vertical-align: top;
+}
+section.portfolio > nav > ol > li{
+    float: left;
+    margin-left: 40px;
+    cursor: pointer;
+}
+section.portfolio > nav > ol > li:first-child{
+    margin-left: 0;
+}
+
+section.portfolio > nav .bar{
+    height: 5px;
+    background: white;
+    border-radius: 3px;
+    margin-top: 5px;
+  }
+  section.portfolio > nav .bar-inner{
+    height: 100%;
+    background: #E6686A;
+    border-radius: 3px;
+    margin-bottom: 100px;
+    transition: all 0.3s; 
+  }
+
+  section.portfolio > nav .bar.state-1 .bar-inner{
+    margin-left: 0;
+    width: 40px;
+  }
+  section.portfolio > nav .bar.state-2 .bar-inner{
+    margin-left: 65px;
+    width: 50px;
+  }
+  section.portfolio > nav .bar.state-3 .bar-inner{
+    margin-left: 140px;
+    width: 96px;
+  }
