--- a/012/style.css
+++ b/012/style.css
@@ -270,6 +270,7 @@ section.skills .progressBar > .progress{
 
 section.portfolio {
     text-align: center;
+    margin-bottom: 50px;
 }
 section.portfolio > nav {
     text-align: center;
