--- a/017/style.css
+++ b/017/style.css
@@ -7,28 +7,53 @@ a {
     text-decoration: none;
 }
 
-kbd {
-    border: 1px solid red;
-    width: 4em;
-    height: 4em;
-    display: inline-block;
-    text-transform: uppercase;
+body {
+    background: rgba(166, 189, 201, 1.0);
+    background: radial-gradient(ellipse at center, rgba(166, 189, 201, 1.0), rgba(24, 217, 229, 1.0));
+}
+
+header {
+    height: 180px;
 }
 
 main {
     text-align: center;
 }
 
+kbd {
+    color: aliceblue;
+    width: 4.4em;
+    height: 4.4em;
+    margin-right: 2px;
+    border: 1px solid #fce38a;
+    border-radius: 4px;
+    display: inline-block;
+    text-transform: uppercase;
+}
+
+kbd:hover {
+    box-shadow: 0px 0px 2px 2px rgba(255,0,0,0.2);
+}
+
 main > .wrapper  {
     display: inline-block;
+    background: rgba(255,255,255,0.2);
+    box-shadow: 0px 0px 1px 1px rgba(82,79,82,0.2);
+    border-radius: 10px;
+    padding: 20px 40px;
 }
 
-main > #kbdWrapper > div:nth-child(2) {
-    margin-left: 1em;
+main > .wrapper > div:nth-child(2),
+main > .wrapper > div:nth-child(3) {
+    margin-top: 3px;
 }
 
-main > #kbdWrapper > div:nth-child(3) {
-    margin-left: 2em;
+main > .wrapper > div:nth-child(2) > kbd {
+    border: 1px solid #eaffd0;
+}
+
+main > .wrapper > div:nth-child(3) > kbd {
+    border: 1px solid #95e1d3;
 }
 
 main > #kbdWrapper > div > kbd {
@@ -44,4 +69,5 @@ kbd > button {
 
 kbd:hover > button {
     display: inline-block;
+    background: inherit;
 }
