--- a/017/style.css
+++ b/017/style.css
@@ -21,7 +21,7 @@ main {
 }
 
 kbd {
-    color: aliceblue;
+    color: rgb(90, 104, 116);
     width: 4.4em;
     height: 4.4em;
     margin-right: 2px;
