--- a/017/style.css
+++ b/017/style.css
@@ -53,7 +53,7 @@ main > .wrapper > div:nth-child(2) > kbd {
 }
 
 main > .wrapper > div:nth-child(3) > kbd {
-    border: 1px solid #95e1d3;
+    border: 1px solid #9ff2ff;
 }
 
 main > #kbdWrapper > div > kbd {
