--- a/019/style.css
+++ b/019/style.css
@@ -1,10 +1,7 @@
 body {
-    padding: 0;
     margin: 0;
 }
 
 #canvas {
-    background: wheat;
-    height: 100vh;
-    position: relative;
+    background: whitesmoke;
 }
