--- a/019/style.css
+++ b/019/style.css
@@ -3,5 +3,11 @@ body {
 }
 
 #canvas {
-    background: whitesmoke;
+    background: #b2f5ff;
+}
+
+#eraser {
+    position: fixed;
+    left: 0;
+    top: 0;
 }
