--- a/025/loading.css
+++ b/025/loading.css
@@ -6,14 +6,14 @@
     }
 
     100% {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
         opacity: 0;
     }
 }
 
 .site-loading {
-    background-color: #fff;
+    background-color: #efefef;
     position: fixed;
     top: 0;
     bottom: 0;
