--- a/025/style.css
+++ b/025/style.css
@@ -1,3 +1,13 @@
+@keyframes menuSlide {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -43,11 +53,20 @@ hr {
 
 /* topNavBar */
 .topNavBar {
+    color: #c0c2c5;
     padding: 20px 0 20px 0;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    transition: all 0.5s;
+}
+.topNavBar.sticky {
+    color: #3d4451;
+    background: white;
+    padding: 10px 0;
+    box-shadow: 0 0 5px rgba(0,0,0,.4);
+    z-index: 1;
 }
 .topNavBar-inner {
     padding: 0 16px;
@@ -67,13 +86,23 @@ hr {
 .topNavBar nav > ul >li > a {
     font-size: 12px;
     font-weight: bold;
-    color: #c0c2c5;
+    color: inhert;
     border-bottom: 3px solid transparent;
     padding-bottom: 11px;
     display: block;
+    position: relative;
 }
-.topNavBar nav > ul >li > a:hover {
-    border-bottom: 3px solid #e8676b;
+.topNavBar nav > ul >li > a:hover::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    background: #e8676b;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    animation: menuSlide .3s;
+
 }
 
 .topNavBar .logo {
