--- a/025/style.css
+++ b/025/style.css
@@ -318,12 +318,18 @@ section.skills .progressBar {
     background-color: #fae1e1;
     border-radius: 3px;
     margin: 4px 0 40px;
+    overflow: hidden;
 }
 section.skills .progressBar > .progress{
     height: 100%;
     width: 50%;
     background-color: #e8676b;
     border-radius: 3px;
+    transform: translateX(0);
+    transition: all .8s;
+}
+section.skills.offset .progress{
+    transform: translateX(-100%);
 }
 
 section.portfolio {
@@ -393,4 +399,12 @@ section.portfolio .works > .smallRU {
 }
 section.portfolio .works > .smallRD {
     top: 312px; left: 645px;
+}
+
+[data-x].offset{
+    transform: translateY(100px);
+  }
+[data-x]{
+    transform: translateY(0);
+    transition: all 0.5s;
 }
