--- a/038-039/style.css
+++ b/038-039/style.css
@@ -258,6 +258,9 @@ section.messageBoard ul {
     padding-bottom: 40px;
     border-top: 1px solid #ddd;
 }
+section.messageBoard ul > li:nth-child(odd) {
+    background-color: #eef;
+}
 section.messageBoard ul > li {
     padding: 10px 0;
     border-bottom: 1px solid #ddd;
