--- a/042/default.css
+++ b/042/default.css
@@ -9,3 +9,23 @@
 .token.function {
     color: black;
 }
+
+@keyframes board {
+    0% {
+        transform: rotate(10deg);
+    }
+    50% {
+        transform: rotate(-10deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+body {
+    -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
