--- a/043/style.css
+++ b/043/style.css
@@ -114,12 +114,12 @@ body {
 .mouth {
     position: absolute;
     left: 50%;
-    bottom: 0;
-    margin-left: -70px;
-    z-index: -1;
+    bottom: 1px;
+    margin-left: -160px;
     width: 320px;
     height: 110px;
     overflow: hidden;
+    z-index: -1;
 }
 
 .tongue {
@@ -129,6 +129,8 @@ body {
     border: 2px solid #000;
     border-radius: 100px/500px;
     position: absolute;
+    margin-left: -70px;
+    left: 50%;
     bottom: 0px;
     overflow: hidden;
 }
