--- a/043/default.css
+++ b/043/default.css
@@ -35,7 +35,7 @@ body {
     background: white;
     cursor: pointer;
     outline: none;
-    transition: all 2s;
+    transition: all .5s;
 }
 
 .actions > button.active {
